# img_proc_demo

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.56eaac1  README.html  README.md  cam.cpp  cam.h  demo.cpp  demo.h  demo.ui  demo_dev.ui  demo_rls.ui  euresyscam.cpp  euresyscam.h  hqvcam.cpp  hqvcam.h  imageproc.cpp  imageproc.h  joystick.cpp  joystick.h  lasersettings.cpp  main.cpp  manual_ICMOS.md  mvcam.cpp  mvcam.h  mywidget.cpp  mywidget.h  phase3-dependency-map.md  phase6-target-architecture.md  preferences.cpp  preferences.ui  progsettings.cpp  progsettings.h  project_zh.ts  settings.ui  utils.cpp  utils.h  zh.ts  zh_cn.ts
build-Demo_combined-Desktop_Qt_5_12_10_MSVC2017_32bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Demo_combined-Desktop_Qt_5_12_10_MSVC2017_32bit-Release/Demo_param_autogen/: mocs_compilation.cpp
build-Demo_combined-Desktop_Qt_5_12_10_MSVC2017_32bit-Release/Demo_param_autogen/EWIEGA46WW/: moc_mywidget.cpp
build-Demo_combined-Desktop_Qt_5_12_10_MSVC2017_32bit-Release/Demo_param_autogen/include/: ui_demo_rls.h
build-Demo_combined-Desktop_Qt_5_12_10_MinGW_32_bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-Demo_combined-Desktop_Qt_5_12_10_MinGW_32_bit-Debug/Demo_param_autogen/: moc_predefs.h  mocs_compilation.cpp
build-Demo_combined-Desktop_Qt_5_12_10_MinGW_32_bit-Debug/Demo_param_autogen/EWIEGA46WW/: moc_demo.cpp  moc_progsettings.cpp
build-Demo_combined-Desktop_Qt_5_12_10_MinGW_32_bit-Debug/Demo_param_autogen/include/: ui_demo_dev.h
build-Demo_combined-Desktop_Qt_5_12_10_MinGW_32_bit-Debug/Demo_release_autogen/: moc_predefs.h
build-Demo_combined-Desktop_Qt_5_12_10_MinGW_32_bit-Debug/Demo_release_autogen/include/: ui_settings.h
build-Demo_combined-Desktop_Qt_5_12_10_MinGW_32_bit-Release/: CMakeCache.txt  Makefile  cmake_install.cmake  zh.qm
build-Demo_combined-Desktop_Qt_5_12_10_MinGW_32_bit-Release/Demo_param_autogen/: moc_predefs.h
build-Demo_combined-Desktop_Qt_5_12_10_MinGW_32_bit-Release/Demo_param_autogen/include/: ui_demo.h  ui_demo_rls.h  ui_settings.h
build-Demo_combined-Desktop_Qt_5_12_10_MinGW_32_bit-Release/Demo_release_autogen/: moc_predefs.h
build-Demo_combined-Desktop_Qt_5_12_10_MinGW_32_bit-Release/Demo_release_autogen/include/: ui_demo_rls.h
others/refactor/: Common Code Smells.md  phase1-feature-inventory.md  phase5-refactoring-roadmap.md  refactoring-analysis-prompt.md  sprint-0-progress.md  sprint-3-progress.md  sprint-5-progress.md  sprint-7-progress.md  sprint-9-progress.md
others/refactor/4. fixes/: sprint-10-progress.md  sprint-11-progress.md  sprint-12-progress.md
others/ui_redesign/: UI_REDESIGN_PLAN.md  color_editor.py  prototype.html
others/ui_redesign/color_schemes/: default.json  monokai.json  night osaka.json  sapphire slate.json
resources/: gist.rc  resources.qrc  style.qss  style_dark.qss  style_light.qss
sdk/HQV/include/: HQV_Param.h
sdk/HQV/lib/: HQV_AVIProcess.lib  HQV_DataConvert.lib  HQV_SDK.lib
sdk32/HQV/lib/: HQV_SDK64.lib
sdk32/euresys/lib/: MultiCam.lib
sdk32/opencv/lib/: opencv_calib3d452.lib  opencv_calib3d452d.lib  opencv_core452.lib  opencv_core452d.lib  opencv_dnn452.lib  opencv_dnn452d.lib  opencv_features2d452.lib  opencv_features2d452d.lib  opencv_flann452.lib  opencv_flann452d.lib  opencv_gapi452.lib  opencv_gapi452d.lib  opencv_highgui452.lib  opencv_highgui452d.lib  opencv_imgcodecs452.lib  opencv_imgcodecs452d.lib  opencv_imgproc452.lib  opencv_imgproc452d.lib  opencv_ml452.lib  opencv_ml452d.lib  opencv_objdetect452.lib  (+10 more)
src/: aliasing.cpp  aliasing.h  cam.cpp  cam.h  controlport.cpp  controlport.h  demo.cpp  demo.h  demo_dev.ui  developeroptions.cpp  developeroptions.ui  distance3dview.cpp  distance3dview.h  ebuscam.cpp  ebuscam.h  euresyscam.cpp  euresyscam.h  gist.rc.in  hqvcam.cpp  imageio.cpp  imageio.h  imageproc.cpp  imageproc.h  joystick.h  laser_settings.ui  lasersettings.cpp  lasersettings.h  main.cpp  mvcam.cpp  mvcam.h  mywidget.cpp  mywidget.h  preferences.cpp  preferences.h  preferences.ui  progsettings.cpp  progsettings.h  scanconfig.cpp  scanconfig.h  scanconfig.ui  (+13 more)
src/_deprecated/: progsettings.h  settings.ui  videosurface.h
src/automation/: autoscan.cpp  autoscan.h  scanpreset.cpp  scanpreset.h
src/cam/: cam.h  ebuscam.cpp  ebuscam.h  euresyscam.cpp  euresyscam.h  hqvcam.h  mvcam.cpp  mvcam.h
src/cmake/: gist.rc.in
src/controller/: auxpanelmanager.cpp  auxpanelmanager.h  devicemanager.cpp  devicemanager.h  lasercontroller.cpp  lasercontroller.h  lenscontroller.cpp  lenscontroller.h  rfcontroller.cpp  rfcontroller.h  scancontroller.cpp  scancontroller.h  tcucontroller.cpp  tcucontroller.h
src/image/: imageio.cpp  imageio.h  imageproc.cpp  imageproc.h
src/pipeline/: pipelineconfig.h  pipelineprocessor.cpp  pipelineprocessor.h  processingparams.h
src/port/: controlport.cpp  controlport.h  huanyu.cpp  huanyu.h  iptzcontroller.h  laser.cpp  laser.h  lens.cpp  lens.h  pelco_protocol.h  ptz.cpp  ptz.h  rangefinder.cpp  rangefinder.h  tcu.cpp  tcu.h  tcu_protocol.h  udpptz.cpp  udpptz.h  usbcan.cpp  usbcan.h
src/thread/: controlportthread.cpp  controlportthread.h  joystick.cpp  joystick.h
src/util/: config.cpp  config.h  constants.h  timedqueue.h  util.cpp  util.h  version.h
src/visual/: aliasing.cpp  aliasing.h  developeroptions.h  distance3dview.cpp  distance3dview.h  distance3dview.ui  laser_control.ui  lasercontrol.cpp  lasercontrol.h  preferences.cpp  preferences.h  preferences.ui  presetpanel.cpp  presetpanel.h  scanconfig.cpp  scanconfig.h  scanconfig.ui  serialserver.cpp  serialserver.h  serialserver.ui  user_panel.ui  userpanel.cpp  userpanel.h
src/widgets/: display.cpp  display.h  floatingwindow.cpp  floatingwindow.h  mywidget.cpp  mywidget.h  statusbar.cpp  statusbar.h  titlebar.cpp  titlebar.h
src/yolo/: inference.cpp  inference.h  yolo_app_config.h  yolo_detector.cpp  yolo_detector.h
tests/: test_config.cpp  test_constants.cpp  test_imageio.cpp  test_imageproc.cpp  test_lens.cpp  test_ptz.cpp  test_rangefinder.cpp  test_tcu.cpp
(+365 files in other folders)
